*navigation-list.scss: overflow auto bugfix

--- a/src/core/component/list/navigation/navigation-list.scss
+++ b/src/core/component/list/navigation/navigation-list.scss
@@ -1,5 +1,7 @@
 .app-navigation-list {
   &.mdc-list {
+    overflow: auto;
+
     .mdc-list-item {
       &.app-active {
         color: red;
